# Multi-Agent-AI-System

./: .gitignore  LANGCHAIN_INTEGRATION_SUMMARY.md  NEW_AGENTS_GUIDE.md  README.md  automated_evaluation.py  main.py  pyproject.toml  quick_agent_test.py  requirements.txt  roadmap.md  test_enhanced_workflow.py  test_individual_agents.py  test_langchain_integration.py  test_system.py  web_interface.py
agents/: google_adk_agent.py  news_agent.py  planner.py  spacex_agent.py  summary_agent.py  weather_agent.py
docs/: ENHANCED_WORKFLOW_SUMMARY.md  INDIVIDUAL_AGENT_TESTING_GUIDE.md  NEWS_AGENT_INTEGRATION.md  ORGANIZATION_SUMMARY.md  SYSTEM_STATUS_REPORT.md  agent_logic.md  roadmap.md
evals/: evaluation_results_20250614_135722.json  evaluation_results_20250614_140711.json  evaluation_results_20250614_141519.json  evaluation_results_20250614_142004.json  test_goals.json
static/: chat.css  chat.js
templates/: chat.html  index.html
test-scripts/: quick_agent_test.py
