[project]
name = "multi-agent-ai-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "google-adk>=1.3.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-google-genai>=2.0.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
